...
        ) {
            LazyColumn(
                state = listState,
                modifier = Modifier
                    .padding(horizontal = 16.dp)
                    .fillMaxSize()
                    .testTag("MainList"),
                verticalArrangement = Arrangement.spacedBy(12.dp),
                contentPadding = PaddingValues(top = 16.dp, bottom = 16.dp)
            ) {
                item {
                    Row(modifier = Modifier.fillMaxWidth(), horizontalArrangement = Arrangement.Center) {
                        Column(horizontalAlignment = Alignment.CenterHorizontally) {
...
                }
            }
        }
    }

    if (showGroupDialog) {
        val groups = (availableGroups + "General" + "Family" + "Work" + "School" + "Sports").distinct().sorted()
        AlertDialog(
            onDismissRequest = { showGroupDialog = false },
            title = { Text(strings.selectGroups) },
            text = {
                LazyColumn {
                    items(groups) { group ->
...
