...
            }
        },
        floatingActionButton = {
            if (!selectionMode) {
                Row(verticalAlignment = Alignment.CenterVertically) {
                    FloatingActionButton(onClick = onAddFriendClick) {
                        Icon(Icons.Rounded.Add, contentDescription = "Add Friend")
                    }
                }
            }
        }
    ) { padding ->
        if (friends.isEmpty()) {
...
